# MTGPy

./: README.md  main.py  pyproject.toml
mtgpy/: __init__.py  ability.py  card.py  deck.py  event.py  format.py  game.py  interface.py  mana.py  object.py  player.py  sideboard.py  types.py  utils.py
mtgpy/types/: __init__.py  ability.py  artifact.py  battle.py  card.py  cardtype.py  creature.py  emblem.py  enchantment.py  gameobject.py  object.py  permanent.py  planeswalker.py  spell.py  token.py
